objects/Order__c.object
<CustomObject>
    <label>Order</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>ETD__c</fullName>
        <label>ETD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X001__c</fullName>
        <label>001</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>BLANKVALUE(TEXT( Supplier__r.Country__c ), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipper__c</fullName>
        <label>Shipper</label>
        <length>199</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_1__c</fullName>
        <label>Value 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_2__c</fullName>
        <label>Value 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>auto_no__c</fullName>
        <displayFormat>{00}</displayFormat>
        <label>auto no</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Country1__c</fullName>
        <label>Country1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customers</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incoterms__c</fullName>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inc1</fullName>
                </value>
                <value>
                    <fullName>Inc2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quay_Rent__c</fullName>
        <label>Quay Rent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BTW_VAT_GST__c</fullName>
        <formula>Total_Price__c  *  Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTW/VAT/GST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_ETA__c</fullName>
        <label>Current ETA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUS_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OUS Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Our_PO_date__c</fullName>
        <label>Our PO date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PLANNED_ETA__c</fullName>
        <label>PLANNED ETA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLANNED_ETD__c</fullName>
        <label>PLANNED ETD</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tank_Rental__c</fullName>
        <label>Tank Rental</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notify_Party__c</fullName>
        <label>Notify_Party</label>
        <length>199</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Documentation</label>
        <referenceTo>Documentation__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_RATE__c</fullName>
        <label>Purchase RATE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_no_nnnnnn__c</fullName>
        <displayFormat>{000}</displayFormat>
        <label>Auto no nnnnnn</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Email_Supplier__c</fullName>
        <formula>Supplier__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Names__c</fullName>
        <formula>Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Names</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Auto_Number__c</fullName>
        <displayFormat>{000}</displayFormat>
        <label>New Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Rich_Text_Order__c</fullName>
        <label>Rich Text Order</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Currency_Invoice__c</fullName>
        <label>Currency Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>EURO</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_PO_Rate__c</fullName>
        <label>Customer PO Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Order_Number__c</fullName>
        <displayFormat>{000}</displayFormat>
        <label>New Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_Belongs_to__c</fullName>
        <label>Order Belongs to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delay_In_Delivery__c</fullName>
        <label>Delay In Delivery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Conditions__c</fullName>
        <label>Special_Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Consignee__c</fullName>
        <label>Supplier Consignee</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_of_Loading_POL__c</fullName>
        <label>Port of Loading (POL)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_OUS_10_7_23__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer OUS 10.7.23</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Date_Qty__c</fullName>
        <label>Customer PO Date &amp; Qty.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factuur_nr_Invoice_N__c</fullName>
        <label>Factuur_nr_Invoice_N</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice_Number__c</fullName>
        <label>Sales Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eurofactor_Assignment__c</fullName>
        <label>Eurofactor Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>s_contact_person_name__c</fullName>
        <label>s contact person name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Value__c</fullName>
        <formula>Customer_PO_Rate__c  *  Loaded_Qty_in_Tank_Container_to_be_Inv__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Invoice Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_of_Destination_POD__c</fullName>
        <label>Port of Destination (POD)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Confirmation_N__c</fullName>
        <label>Purchase Confirmation N°</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Contact Person</label>
        <referenceTo>Supplier_Contact_Person__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verkoper_Seller_Address__c</fullName>
        <formula>Supplier__r.Verkoper_Seller_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verkoper / Seller Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>haulier_and_rate_if_DDP__c</fullName>
        <label>haulier and rate (if DDP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tank_Owner_BL_if_ISOTANK__c</fullName>
        <label>Tank Owner (BL), if ISOTANK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>supplier_Inv_No_and_Date__c</fullName>
        <label>supplier Inv No and Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Formula_Delay_In_Delivery__c</fullName>
        <formula>Bloom_best_possible_delivery_date__c  -  Customer_Reqd_Delivery_date_as_per_PO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Delay In Delivery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Valuedata__c</fullName>
        <label>Customer Invoice Value data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_terms_for_Customer__c</fullName>
        <label>Payment terms for Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100% Advance</fullName>
                </value>
                <value>
                    <fullName>(Numbers) days after delivery</fullName>
                </value>
                <value>
                    <fullName>(Numbers) days against copy of B/L</fullName>
                </value>
                <value>
                    <fullName>(Number) days from Invoice date</fullName>
                </value>
                <value>
                    <fullName>(%Value) TT against copy of B/L</fullName>
                </value>
                <value>
                    <fullName>(%Value) against copy of B/L</fullName>
                </value>
                <value>
                    <fullName>(%Value) Advance &amp;(%Value) Balance against B/L</fullName>
                </value>
                <value>
                    <fullName>(%Value) Advance &amp; (%Value) Balance against delivery</fullName>
                </value>
                <value>
                    <fullName>(%Value) Advance, Balance (%Value) after (Number) days of Delivery</fullName>
                </value>
                <value>
                    <fullName>LC at Sight</fullName>
                </value>
                <value>
                    <fullName>Others (option to update manually)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pick_Up_Quay_Number_if_DDP__c</fullName>
        <label>Pick Up Quay Number (if DDP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Line_Vessel_BL_No__c</fullName>
        <label>Shipping Line (Vessel, BL No.)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_with_Customer__c</fullName>
        <label>Payment Terms with Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>THC_Invoice_from_Tank_Owner__c</fullName>
        <label>THC Invoice from Tank Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Empty_reference_announcement__c</fullName>
        <label>Empty reference + announcement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_COntact_Person_Email__c</fullName>
        <formula>Supplier_Contact_Person__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier COntact Person Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Totaal_Total_Incl_BTW_VAT_GST__c</fullName>
        <formula>Total_Price__c  *  BTW_VAT_GST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totaal/Total Incl. BTW/VAT/(GST)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Haulier_Invoice_received_or_not__c</fullName>
        <label>Haulier Invoice, received or not</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Person_formula__c</fullName>
        <formula>Supplier_Contact_Person__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Contact Person formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Delivery_Address_if_DDP__c</fullName>
        <label>Customer Delivery Address (if DDP)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_terms_for_Purchase_Order__c</fullName>
        <label>Payment terms for Purchase Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Allocation_of_Tank_No_to_Customer__c</fullName>
        <label>Allocation of Tank No. to Customer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bloom_best_possible_delivery_date__c</fullName>
        <label>Bloom best possible delivery date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_Wise_Purchase_Confirmation__c</fullName>
        <label>Country Wise Purchase Confirmation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Terms_to_Customer_as_in_PO__c</fullName>
        <label>Delivery Terms to Customer as in PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Reqd_Delivery_date_as_per_PO__c</fullName>
        <label>Customer Reqd. Delivery date as per PO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMR_Received_or_Not_from_Haulier_after__c</fullName>
        <label>CMR Received or Not (from Haulier, after</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status_Location_as_per_trackin__c</fullName>
        <label>Current Status - Location as per trackin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loaded_Qty_in_Tank_Container_to_be_Inv__c</fullName>
        <label>Loaded Qty. in Tank Container (to be Inv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vandevyver_Invoice_for_custom_clearance__c</fullName>
        <label>Vandevyver Invoice for custom clearance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_terms_Purchase_Order_to_Supplier__c</fullName>
        <label>Payment terms Purchase Order to Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100%Advance</fullName>
                </value>
                <value>
                    <fullName>(%Value) Adv &amp; (%Value) bal against B/L copy, (Number) days before ETA</fullName>
                </value>
                <value>
                    <fullName>(%Value) against B/L copy, 10 days before ETA</fullName>
                </value>
                <value>
                    <fullName>(Numbers) days from invoice date</fullName>
                </value>
                <value>
                    <fullName>After (Number) days from date of Delivery</fullName>
                </value>
                <value>
                    <fullName>(%Value) Adv &amp; bal (%Value) against B/L copy</fullName>
                </value>
                <value>
                    <fullName>(%Value) Adv Payment and (%Value) bal after (Number) days from B/L date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Procurement_Section</fullName>
        <active>true</active>
        <label>Procurement Section</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution_Section</fullName>
        <active>true</active>
        <label>Distribution Section</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Order_Information</fullName>
        <active>true</active>
        <label>Customer Order Information</label>
    </recordTypes>
</CustomObject>